--- a/pages/home.html
+++ b/pages/home.html
@@ -1,1 +1,11 @@
+<div class="vibe-banner" style="background: #222; padding: 40px; border-radius: 15px; text-align: center;">
+    <h1>Мой Vibe</h1>
+    <button onclick="alert('Запуск рандома!')">Слушать</button>
+</div>
 
+<h2 style="margin: 20px 0;">Альбомы на сегодня</h2>
+<div class="album-card" onclick="loadPage('mayhem')" style="cursor:pointer; width: 200px;">
+    <img src="https://s3.k-connect.ru/static/music/1475/5955/1770656744_cover.jpeg" style="width:100%; border-radius:10px;">
+    <b>Mayhem</b>
+    <p style="color:gray">Lady Gaga</p>
+</div>
