--- a/pages/mayhem.html
+++ b/pages/mayhem.html
@@ -1,1 +1,10 @@
+<div style="display:flex; gap:20px; align-items: flex-end;">
+    <img src="https://s3.k-connect.ru/static/music/1475/5955/1770656744_cover.jpeg" width="200">
+    <h1>Mayhem</h1>
+</div>
 
+<div class="track-list" style="margin-top:20px;">
+    <div onclick="parent.playMusic('URL_ПЕСНИ', 'Disease')" style="padding:10px; border-bottom:1px solid #222; cursor:pointer;">
+        1. Disease (3:50)
+    </div>
+    </div>
