--- a/pages/home.html
+++ b/pages/home.html
@@ -1,11 +1,11 @@
-<div class="vibe-banner" style="background: #222; padding: 40px; border-radius: 15px; text-align: center;">
-    <h1>Мой Vibe</h1>
-    <button onclick="alert('Запуск рандома!')">Слушать</button>
+<div style="background: linear-gradient(135deg, #4b3621, #000); padding: 50px; border-radius: 15px; margin-bottom: 30px;">
+    <h1 style="font-size: 55px; font-weight: 800; letter-spacing: -2px;">Мой Vibe</h1>
+    <p style="color: #bbb; margin-top: 10px;">Музыка под твое настроение</p>
 </div>
 
-<h2 style="margin: 20px 0;">Альбомы на сегодня</h2>
-<div class="album-card" onclick="loadPage('mayhem')" style="cursor:pointer; width: 200px;">
-    <img src="https://s3.k-connect.ru/static/music/1475/5955/1770656744_cover.jpeg" style="width:100%; border-radius:10px;">
-    <b>Mayhem</b>
-    <p style="color:gray">Lady Gaga</p>
+<h2 style="margin-bottom: 20px;">Альбомы на сегодня</h2>
+<div class="album-card" onclick="location.hash='#mayhem'">
+    <img src="https://s3.k-connect.ru/static/music/1475/5955/1770656744_cover.jpeg" style="width:100%; border-radius:8px; margin-bottom:12px;">
+    <b>Mayhem</b><br>
+    <small style="color:#7a7a7a;">Lady Gaga • 2025</small>
 </div>
