--- a/pages/mayhem.html
+++ b/pages/mayhem.html
@@ -1,10 +1,22 @@
-<div style="display:flex; gap:20px; align-items: flex-end;">
-    <img src="https://s3.k-connect.ru/static/music/1475/5955/1770656744_cover.jpeg" width="200">
-    <h1>Mayhem</h1>
+<div style="display:flex; gap:35px; align-items: flex-end; margin-bottom:40px;">
+    <img src="https://s3.k-connect.ru/static/music/1475/5955/1770656744_cover.jpeg" width="240" style="border-radius:12px; box-shadow: 0 15px 45px rgba(0,0,0,0.6);">
+    <div>
+        <p style="font-size:12px; font-weight:900; color:#7a7a7a;">АЛЬБОМ</p>
+        <h1 style="font-size:85px; font-weight:900; letter-spacing:-4px; margin: 5px 0;">Mayhem</h1>
+        <p>Lady Gaga • 2025 • 14 песен</p>
+    </div>
 </div>
 
-<div class="track-list" style="margin-top:20px;">
-    <div onclick="parent.playMusic('URL_ПЕСНИ', 'Disease')" style="padding:10px; border-bottom:1px solid #222; cursor:pointer;">
-        1. Disease (3:50)
+<div class="track-list">
+    <div class="track-row" onclick="window.playNewTrack('https://s3.k-connect.ru/static/music/1475/5954/1770656682_Lady_Gaga_-_Disease.mp3', 'Disease', 'https://s3.k-connect.ru/static/music/1475/5955/1770656744_cover.jpeg', 'Disease — это мощный сингл, открывающий эру Mayhem. Сочетает в себе темный поп и индастриал.')">
+        <span style="color:#7a7a7a">1</span>
+        <b>Disease</b>
+        <span style="text-align:right; color:#7a7a7a">3:50</span>
     </div>
+
+    <div class="track-row" onclick="window.playNewTrack('https://s3.k-connect.ru/static/music/1475/5955/1770656744_Lady_Gaga_-_Abracadabra.mp3', 'Abracadabra', 'https://s3.k-connect.ru/static/music/1475/5955/1770656744_cover.jpeg', 'Abracadabra — магический и гипнотический трек с альбома. Ожидается, что он станет хитом чартов.')">
+        <span style="color:#7a7a7a">2</span>
+        <b>Abracadabra</b>
+        <span style="text-align:right; color:#7a7a7a">3:43</span>
     </div>
+</div>
