--- a/pages/home.html
+++ b/pages/home.html
@@ -1,9 +1,10 @@
-<div style="background: linear-gradient(135deg, #4b3621, #000); padding: 50px; border-radius: 15px; margin-bottom: 30px;">
+<div style="background: linear-gradient(135deg, #4b3621, #000); padding: 50px; border-radius: 15px; margin-bottom: 30px; text-align: center;">
     <h1 style="font-size: 55px; font-weight: 800; letter-spacing: -2px;">Мой Vibe</h1>
     <p style="color: #bbb; margin-top: 10px;">Музыка под твое настроение</p>
 </div>
 
 <h2 style="margin-bottom: 20px;">Альбомы на сегодня</h2>
+
 <div class="album-card" onclick="location.hash='#mayhem'">
     <img src="https://s3.k-connect.ru/static/music/1475/5955/1770656744_cover.jpeg" style="width:100%; border-radius:8px; margin-bottom:12px;">
     <b>Mayhem</b><br>
