--- a/pages/home.html
+++ b/pages/home.html
@@ -1,12 +1,15 @@
-<div style="background: linear-gradient(135deg, #4b3621, #000); padding: 50px; border-radius: 15px; margin-bottom: 30px; text-align: center;">
-    <h1 style="font-size: 55px; font-weight: 800; letter-spacing: -2px;">Мой Vibe</h1>
-    <p style="color: #bbb; margin-top: 10px;">Музыка под твое настроение</p>
+<div style="height:260px; border-radius:12px; background: linear-gradient(135deg, #4b3621, #000); display:flex; flex-direction:column; justify-content:center; align-items:center; margin-bottom:30px;">
+    <h1 style="font-size:55px; font-weight:800; margin-bottom:15px;">Мой Vibe</h1>
+    <div class="p-btn" style="width:65px; height:65px; background:#1ed760; border-radius:50%;">
+        <i data-lucide="play" fill="black" color="black" size="30" style="margin-left:4px"></i>
+    </div>
 </div>
 
-<h2 style="margin-bottom: 20px;">Альбомы на сегодня</h2>
-
-<div class="album-card" onclick="location.hash='#mayhem'">
-    <img src="https://s3.k-connect.ru/static/music/1475/5955/1770656744_cover.jpeg" style="width:100%; border-radius:8px; margin-bottom:12px;">
-    <b>Mayhem</b><br>
-    <small style="color:#7a7a7a;">Lady Gaga • 2025</small>
+<h2 style="margin-bottom:20px;">Альбомы на сегодня</h2>
+<div class="album-grid">
+    <div class="album-card" onclick="location.hash='#mayhem'">
+        <img src="https://s3.k-connect.ru/static/music/1475/5955/1770656744_cover.jpeg" style="width:100%; border-radius:8px; margin-bottom:12px;">
+        <b style="font-size:15px;">Mayhem</b><br>
+        <small style="color:#7a7a7a">Lady Gaga • 2025</small>
+    </div>
 </div>
