--- a/pages/mayhem.html
+++ b/pages/mayhem.html
@@ -1,22 +1,23 @@
-<div style="display:flex; gap:35px; align-items: flex-end; margin-bottom:40px;">
-    <img src="https://s3.k-connect.ru/static/music/1475/5955/1770656744_cover.jpeg" width="240" style="border-radius:12px; box-shadow: 0 15px 45px rgba(0,0,0,0.6);">
+<div style="display:flex; gap:30px; align-items:flex-end; margin-bottom:40px;">
+    <img src="https://s3.k-connect.ru/static/music/1475/5955/1770656744_cover.jpeg" style="width:230px; border-radius:10px; box-shadow: 0 20px 50px rgba(0,0,0,0.5);">
     <div>
-        <p style="font-size:12px; font-weight:900; color:#7a7a7a;">АЛЬБОМ</p>
-        <h1 style="font-size:85px; font-weight:900; letter-spacing:-4px; margin: 5px 0;">Mayhem</h1>
+        <small style="font-weight:800; color:#7a7a7a">АЛЬБОМ</small>
+        <h1 style="font-size:70px; font-weight:900; margin:10px 0;">Mayhem</h1>
         <p>Lady Gaga • 2025 • 14 песен</p>
     </div>
 </div>
 
-<div class="track-list">
-    <div class="track-row" onclick="window.playNewTrack('https://s3.k-connect.ru/static/music/1475/5954/1770656682_Lady_Gaga_-_Disease.mp3', 'Disease', 'https://s3.k-connect.ru/static/music/1475/5955/1770656744_cover.jpeg', 'Disease — это мощный сингл, открывающий эру Mayhem. Сочетает в себе темный поп и индастриал.')">
+<div id="album-list">
+    <div class="track-row" onclick="window.playNewTrack('https://s3.k-connect.ru/static/music/1475/5954/1770656682_Lady_Gaga_-_Disease.mp3', 'Disease', 'https://s3.k-connect.ru/static/music/1475/5955/1770656744_cover.jpeg')">
         <span style="color:#7a7a7a">1</span>
         <b>Disease</b>
         <span style="text-align:right; color:#7a7a7a">3:50</span>
     </div>
-
-    <div class="track-row" onclick="window.playNewTrack('https://s3.k-connect.ru/static/music/1475/5955/1770656744_Lady_Gaga_-_Abracadabra.mp3', 'Abracadabra', 'https://s3.k-connect.ru/static/music/1475/5955/1770656744_cover.jpeg', 'Abracadabra — магический и гипнотический трек с альбома. Ожидается, что он станет хитом чартов.')">
+    
+    <div class="track-row" onclick="window.playNewTrack('https://s3.k-connect.ru/static/music/1475/5955/1770656744_Lady_Gaga_-_Abracadabra.mp3', 'Abracadabra', 'https://s3.k-connect.ru/static/music/1475/5955/1770656744_cover.jpeg')">
         <span style="color:#7a7a7a">2</span>
         <b>Abracadabra</b>
         <span style="text-align:right; color:#7a7a7a">3:43</span>
     </div>
-</div>
+    
+    </div>
