--- a/pages/mayhem.html
+++ b/pages/mayhem.html
@@ -1,21 +1,21 @@
 <div style="display:flex; justify-content:space-between; align-items:flex-end; margin-bottom:40px;">
     <div style="display:flex; gap:30px; align-items:flex-end;">
-        <img src="https://s3.k-connect.ru/static/music/1475/5955/1770656744_cover.jpeg" style="width:230px; border-radius:10px; box-shadow: 0 20px 50px rgba(0,0,0,0.5);">
+        <img src="https://s3.k-connect.ru/static/music/1475/5955/1770656744_cover.jpeg" style="width:230px; border-radius:12px; box-shadow: 0 20px 40px rgba(0,0,0,0.6);">
         <div>
-            <small style="font-weight:800; color:var(--text-gray)">АЛЬБОМ</small>
-            <h1 style="font-size:70px; font-weight:900; margin:10px 0;">Mayhem</h1>
-            <p>Lady Gaga • 2025 • 14 песен</p>
+            <small style="font-weight:800; color:#a7a7a7">АЛЬБОМ</small>
+            <h1 style="font-size:65px; font-weight:900; margin:5px 0;">Mayhem</h1>
+            <p style="color:#a7a7a7">Lady Gaga • 2025 • 14 песен</p>
         </div>
     </div>
-    <div style="background: var(--brand-light); width: 70px; height: 70px; border-radius: 50%; display: flex; align-items:center; justify-content:center; cursor:pointer; margin-bottom:10px;" onclick="window.playTrack(0, mayhemTracks)">
-        <i data-lucide="play" fill="black" color="black" size="32" style="margin-left:4px"></i>
+    <div class="big-play-btn" onclick="playTrack(0, mayhemList)">
+        <i data-lucide="play" fill="black" size="30" style="margin-left:5px"></i>
     </div>
 </div>
 
-<div id="mayhem-list"></div>
+<div id="mayhem-container"></div>
 
 <script>
-    var mayhemTracks = [
+    const mayhemList = [
         {title:"Disease", url:"https://s3.k-connect.ru/static/music/1475/5954/1770656682_Lady_Gaga_-_Disease.mp3", time:"3:50"},
         {title:"Abracadabra", url:"https://s3.k-connect.ru/static/music/1475/5955/1770656744_Lady_Gaga_-_Abracadabra.mp3", time:"3:43"},
         {title:"Garden Of Eden", url:"https://s3.k-connect.ru/static/music/1475/5956/1770656858_Lady_Gaga_-_Garden_Of_Eden.mp3", time:"3:59"},
@@ -32,22 +32,13 @@
         {title:"Die With A Smile", url:"https://s3.k-connect.ru/static/music/1475/5970/1770656935_Lady_Gaga_-_Die_With_A_Smile.mp3", time:"4:11"}
     ];
 
-    function renderMayhem() {
-        document.getElementById('mayhem-list').innerHTML = mayhemTracks.map((t, i) => `
-            <div class="track-row id-tr-${i}" onclick="window.playTrack(${i}, mayhemTracks)">
-                <span style="color:var(--text-gray)">${i+1}</span>
-                <b>${t.title}</b>
-                <span style="text-align:right; color:var(--text-gray)">${t.time}</span>
-            </div>
-        `).join('');
-    }
-
-    window.highlightCurrent = function(idx) {
-        document.querySelectorAll('.track-row').forEach(r => r.classList.remove('playing'));
-        const activeRow = document.querySelector('.id-tr-' + idx);
-        if(activeRow) activeRow.classList.add('playing');
-    }
-
-    renderMayhem();
+    document.getElementById('mayhem-container').innerHTML = mayhemList.map((t, i) => `
+        <div class="track-list-item tr-idx-${i}" onclick="playTrack(${i}, mayhemList)">
+            <span>${i+1}</span>
+            <b>${t.title}</b>
+            <span style="text-align:right; opacity:0.6">${t.time}</span>
+        </div>
+    `).join('');
+    
     lucide.createIcons();
 </script>
