--- a/pages/mayhem.html
+++ b/pages/mayhem.html
@@ -1,21 +1,21 @@
 <div style="display:flex; justify-content:space-between; align-items:flex-end; margin-bottom:40px;">
     <div style="display:flex; gap:30px; align-items:flex-end;">
-        <img src="https://s3.k-connect.ru/static/music/1475/5955/1770656744_cover.jpeg" style="width:230px; border-radius:12px; box-shadow: 0 20px 40px rgba(0,0,0,0.6);">
+        <img src="https://s3.k-connect.ru/static/music/1475/5955/1770656744_cover.jpeg" style="width:230px; border-radius:12px;">
         <div>
             <small style="font-weight:800; color:#a7a7a7">АЛЬБОМ</small>
             <h1 style="font-size:65px; font-weight:900; margin:5px 0;">Mayhem</h1>
-            <p style="color:#a7a7a7">Lady Gaga • 2025 • 14 песен</p>
+            <p>Lady Gaga • 2025 • 14 песен</p>
         </div>
     </div>
-    <div class="big-play-btn" onclick="playTrack(0, mayhemList)">
-        <i data-lucide="play" fill="black" size="30" style="margin-left:5px"></i>
+    <div class="big-play-btn" onclick="playTrack(0, mayhemTracks)">
+        <i data-lucide="play" fill="black" size="32" style="margin-left:4px"></i>
     </div>
 </div>
 
-<div id="mayhem-container"></div>
+<div id="track-list-container"></div>
 
 <script>
-    const mayhemList = [
+    const mayhemTracks = [
         {title:"Disease", url:"https://s3.k-connect.ru/static/music/1475/5954/1770656682_Lady_Gaga_-_Disease.mp3", time:"3:50"},
         {title:"Abracadabra", url:"https://s3.k-connect.ru/static/music/1475/5955/1770656744_Lady_Gaga_-_Abracadabra.mp3", time:"3:43"},
         {title:"Garden Of Eden", url:"https://s3.k-connect.ru/static/music/1475/5956/1770656858_Lady_Gaga_-_Garden_Of_Eden.mp3", time:"3:59"},
@@ -32,13 +32,12 @@
         {title:"Die With A Smile", url:"https://s3.k-connect.ru/static/music/1475/5970/1770656935_Lady_Gaga_-_Die_With_A_Smile.mp3", time:"4:11"}
     ];
 
-    document.getElementById('mayhem-container').innerHTML = mayhemList.map((t, i) => `
-        <div class="track-list-item tr-idx-${i}" onclick="playTrack(${i}, mayhemList)">
-            <span>${i+1}</span>
+    document.getElementById('track-list-container').innerHTML = mayhemTracks.map((t, i) => `
+        <div class="track-item tr-row-${i}" onclick="playTrack(${i}, mayhemTracks)">
+            <span style="color:#a7a7a7">${i+1}</span>
             <b>${t.title}</b>
-            <span style="text-align:right; opacity:0.6">${t.time}</span>
+            <span style="text-align:right; color:#a7a7a7">${t.time}</span>
         </div>
     `).join('');
-    
     lucide.createIcons();
 </script>
