--- a/pages/home.html
+++ b/pages/home.html
@@ -1,16 +1,14 @@
-<div style="height:280px; border-radius:12px; background: linear-gradient(135deg, #634731, #000); display:flex; flex-direction:column; justify-content:center; align-items:center; margin-bottom:30px; box-shadow: inset 0 0 100px rgba(0,0,0,0.8);">
-    <h1 style="font-size:60px; font-weight:800; margin-bottom:20px;">Мой Vibe</h1>
-    <div style="background: #1ed760; width: 70px; height: 70px; border-radius: 50%; display: flex; align-items:center; justify-content:center; cursor:pointer;" onclick="playRandomVibe()">
-        <i data-lucide="play" fill="black" color="black" size="32" style="margin-left:4px"></i>
+<div class="vibe-banner">
+    <h1>Мой Vibe</h1>
+    <div class="vibe-play" onclick="playVibe()">
+        <i data-lucide="play" fill="black"></i>
     </div>
 </div>
-
-<h2 style="margin-bottom:20px; font-size:22px;">Альбомы на сегодня</h2>
-<div style="display: grid; grid-template-columns: repeat(auto-fill, minmax(180px, 1fr)); gap: 20px;">
-    <div class="album-card" style="background:#141414; padding:15px; border-radius:10px; cursor:pointer;" onclick="location.hash='#mayhem'">
-        <img src="https://s3.k-connect.ru/static/music/1475/5955/1770656744_cover.jpeg" style="width:100%; border-radius:8px; margin-bottom:12px;">
-        <b>Mayhem</b><br>
-        <small style="color:#a7a7a7">Lady Gaga • 2025</small>
+<h2 style="margin-bottom:20px;">Альбомы</h2>
+<div class="album-grid">
+    <div class="album-card" onclick="location.hash='#mayhem'">
+        <img src="https://s3.k-connect.ru/static/music/1475/5955/1770656744_cover.jpeg">
+        <b>Mayhem</b><br><small>Lady Gaga</small>
     </div>
 </div>
 <script>lucide.createIcons();</script>
