--- a/pages/home.html
+++ b/pages/home.html
@@ -1,14 +1,11 @@
 <div class="vibe-banner">
     <h1>Мой Vibe</h1>
     <div class="vibe-play" onclick="playVibe()">
-        <i data-lucide="play" fill="black"></i>
+        <i data-lucide="play" fill="black" size="32"></i>
     </div>
 </div>
-<h2 style="margin-bottom:20px;">Альбомы</h2>
-<div class="album-grid">
-    <div class="album-card" onclick="location.hash='#mayhem'">
-        <img src="https://s3.k-connect.ru/static/music/1475/5955/1770656744_cover.jpeg">
-        <b>Mayhem</b><br><small>Lady Gaga</small>
+
+<h2 class="section-title">Mayhem — Lady Gaga</h2>
+<div class="track-grid" id="home-grid">
     </div>
-</div>
 <script>lucide.createIcons();</script>
