--- a/pages/home.html
+++ b/pages/home.html
@@ -1,11 +1,34 @@
-<div class="vibe-banner">
-    <h1>Мой Vibe</h1>
-    <div class="vibe-play" onclick="playVibe()">
-        <i data-lucide="play" fill="black" size="32"></i>
+<div style="height:260px; border-radius:12px; background: linear-gradient(135deg, #4b3621, #000); display:flex; flex-direction:column; justify-content:center; align-items:center; margin-bottom:30px;">
+    <h1 style="font-size:55px; font-weight:800; margin-bottom:15px;">Мой Vibe</h1>
+    <div class="p-btn" style="width:65px; height:65px; background:#1ed760; border-radius:50%;" 
+         onclick="const r = Math.floor(Math.random()*14); window.playTrack(r, albumTracks);">
+        <i data-lucide="play" fill="black" color="black" size="30" style="margin-left:4px"></i>
     </div>
 </div>
-
-<h2 class="section-title">Mayhem — Lady Gaga</h2>
-<div class="track-grid" id="home-grid">
+<h2 style="margin-bottom:20px;">Альбомы на сегодня</h2>
+<div style="display: grid; grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); gap: 20px;">
+    <div class="album-card" onclick="location.hash='#mayhem'">
+        <img src="https://s3.k-connect.ru/static/music/1475/5955/1770656744_cover.jpeg" style="width:100%; border-radius:8px; margin-bottom:12px;">
+        <b style="font-size:15px;">Mayhem</b><br>
+        <small style="color:#7a7a7a">Lady Gaga • 2025</small>
     </div>
-<script>lucide.createIcons();</script>
+</div>
+<script>
+    // Массив для функции Vibe
+    var albumTracks = [
+        {title:"Disease", url:"https://s3.k-connect.ru/static/music/1475/5954/1770656682_Lady_Gaga_-_Disease.mp3", time:"3:50"},
+        {title:"Abracadabra", url:"https://s3.k-connect.ru/static/music/1475/5955/1770656744_Lady_Gaga_-_Abracadabra.mp3", time:"3:43"},
+        {title:"Garden Of Eden", url:"https://s3.k-connect.ru/static/music/1475/5956/1770656858_Lady_Gaga_-_Garden_Of_Eden.mp3", time:"3:59"},
+        {title:"Perfect Celebrity", url:"https://s3.k-connect.ru/static/music/1475/5957/1770656859_Lady_Gaga_-_Perfect_Celebrity.mp3", time:"3:49"},
+        {title:"Vanish Into You", url:"https://s3.k-connect.ru/static/music/1475/5959/1770656860_Lady_Gaga_-_Vanish_Into_You.mp3", time:"4:04"},
+        {title:"Killah", url:"https://s3.k-connect.ru/static/music/1475/5960/1770656860_Lady_Gaga_-_Killah.mp3", time:"3:30"},
+        {title:"Zombieboy", url:"https://s3.k-connect.ru/static/music/1475/5961/1770656861_Lady_Gaga_-_Zombieboy.mp3", time:"3:33"},
+        {title:"LoveDrug", url:"https://s3.k-connect.ru/static/music/1475/5963/1770656862_Lady_Gaga_-_LoveDrug.mp3", time:"3:13"},
+        {title:"How Bad Do U Want Me", url:"https://s3.k-connect.ru/static/music/1475/5964/1770656932_Lady_Gaga_-_How_Bad_Do_U_Want_Me.mp3", time:"3:58"},
+        {title:"Don't Call Tonight", url:"https://s3.k-connect.ru/static/music/1475/5965/1770656932_Lady_Gaga_-_Don_t_Call_Tonight.mp3", time:"3:45"},
+        {title:"Shadow Of A Man", url:"https://s3.k-connect.ru/static/music/1475/5967/1770656933_Lady_Gaga_-_Shadow_Of_A_Man.mp3", time:"3:19"},
+        {title:"The Beast", url:"https://s3.k-connect.ru/static/music/1475/5968/1770656934_Lady_Gaga_-_The_Beast.mp3", time:"3:54"},
+        {title:"Blade Of Grass", url:"https://s3.k-connect.ru/static/music/1475/5969/1770656934_Lady_Gaga_-_Blade_Of_Grass.mp3", time:"4:17"},
+        {title:"Die With A Smile", url:"https://s3.k-connect.ru/static/music/1475/5970/1770656935_Lady_Gaga_-_Die_With_A_Smile.mp3", time:"4:11"}
+    ];
+</script>
