--- a/pages/home.html
+++ b/pages/home.html
@@ -1,11 +1,13 @@
 <div style="height:260px; border-radius:12px; background: linear-gradient(135deg, #4b3621, #000); display:flex; flex-direction:column; justify-content:center; align-items:center; margin-bottom:30px;">
     <h1 style="font-size:55px; font-weight:800; margin-bottom:15px;">Мой Vibe</h1>
     <div class="p-btn" style="width:65px; height:65px; background:#1ed760; border-radius:50%;" 
-         onclick="const r = Math.floor(Math.random()*14); window.playTrack(r, albumTracks);">
+         onclick="const r = Math.floor(Math.random() * window.albumTracks.length); window.playTrack(r, window.albumTracks);">
         <i data-lucide="play" fill="black" color="black" size="30" style="margin-left:4px"></i>
     </div>
 </div>
+
 <h2 style="margin-bottom:20px;">Альбомы на сегодня</h2>
+
 <div style="display: grid; grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); gap: 20px;">
     <div class="album-card" onclick="location.hash='#mayhem'">
         <img src="https://s3.k-connect.ru/static/music/1475/5955/1770656744_cover.jpeg" style="width:100%; border-radius:8px; margin-bottom:12px;">
@@ -13,9 +15,10 @@
         <small style="color:#7a7a7a">Lady Gaga • 2025</small>
     </div>
 </div>
+
 <script>
-    // Массив для функции Vibe
-    var albumTracks = [
+    // Глобальный массив треков для всего сайта
+    window.albumTracks = [
         {title:"Disease", url:"https://s3.k-connect.ru/static/music/1475/5954/1770656682_Lady_Gaga_-_Disease.mp3", time:"3:50"},
         {title:"Abracadabra", url:"https://s3.k-connect.ru/static/music/1475/5955/1770656744_Lady_Gaga_-_Abracadabra.mp3", time:"3:43"},
         {title:"Garden Of Eden", url:"https://s3.k-connect.ru/static/music/1475/5956/1770656858_Lady_Gaga_-_Garden_Of_Eden.mp3", time:"3:59"},
@@ -31,4 +34,7 @@
         {title:"Blade Of Grass", url:"https://s3.k-connect.ru/static/music/1475/5969/1770656934_Lady_Gaga_-_Blade_Of_Grass.mp3", time:"4:17"},
         {title:"Die With A Smile", url:"https://s3.k-connect.ru/static/music/1475/5970/1770656935_Lady_Gaga_-_Die_With_A_Smile.mp3", time:"4:11"}
     ];
+    
+    // Обновляем иконки
+    lucide.createIcons();
 </script>
