--- a/pages/mayhem.html
+++ b/pages/mayhem.html
@@ -10,7 +10,6 @@
 <div id="album-list"></div>
 
 <script>
-    // Используем тот же глобальный массив, что и в home.html
     if (!window.albumTracks) {
         window.albumTracks = [
             {title:"Disease", url:"https://s3.k-connect.ru/static/music/1475/5954/1770656682_Lady_Gaga_-_Disease.mp3", time:"3:50"},
@@ -30,9 +29,7 @@
         ];
     }
 
-    const tracks = window.albumTracks;
-
-    document.getElementById('album-list').innerHTML = tracks.map((t, i) => `
+    document.getElementById('album-list').innerHTML = window.albumTracks.map((t, i) => `
         <div class="track-row" onclick="window.playTrack(${i}, window.albumTracks)">
             <span style="color:#7a7a7a">${i+1}</span>
             <b>${t.title}</b>
