--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
 
     <div class="app-main">
-        <!-- ЛЕВАЯ ПАНЕЛЬ как в УУУУУУУУ -->
+        <!-- ЛЕВАЯ ПАНЕЛЬ -->
         <aside class="panel side">
             <div class="filter-nav">
                 <button class="nav-arrow" onclick="scrollFilters(-120)"><i data-lucide="chevron-left" size="18"></i></button>
@@ -49,7 +49,7 @@
         <!-- ЦЕНТР -->
         <main class="panel center scroll-hide" id="content-area"></main>
 
-        <!-- ПРАВАЯ ПАНЕЛЬ как в УУУУУУУУ -->
+        <!-- ПРАВАЯ ПАНЕЛЬ -->
         <aside class="panel side">
             <img id="side-cover" src="" style="width:100%; border-radius:10px; margin-bottom:20px; display: none;">
             <div style="display:flex; justify-content:space-between; align-items:center;">
@@ -66,7 +66,7 @@
         </aside>
     </div>
 
-    <!-- ПЛЕЕР с квадратными кнопками -->
+    <!-- ПЛЕЕР -->
     <footer class="player-bar">
         <div style="display:flex; align-items:center; gap:15px;">
             <img id="p-img" src="" style="width:58px; height:58px; border-radius:4px; background:#1a1a1a; display:none;">
@@ -113,6 +113,27 @@
         let isVolDragging = false;
         const albumCover = 'https://s3.k-connect.ru/static/music/1475/5955/1770656744_cover.jpeg';
 
+        // ========== ГЛОБАЛЬНЫЙ МАССИВ ТРЕКОВ ==========
+        window.albumTracks = [
+            {title: "Disease", url: "https://s3.k-connect.ru/static/music/1475/5954/1770656682_Lady_Gaga_-_Disease.mp3", time: "3:50"},
+            {title: "Abracadabra", url: "https://s3.k-connect.ru/static/music/1475/5955/1770656744_Lady_Gaga_-_Abracadabra.mp3", time: "3:43"},
+            {title: "Garden Of Eden", url: "https://s3.k-connect.ru/static/music/1475/5956/1770656858_Lady_Gaga_-_Garden_Of_Eden.mp3", time: "3:59"},
+            {title: "Perfect Celebrity", url: "https://s3.k-connect.ru/static/music/1475/5957/1770656859_Lady_Gaga_-_Perfect_Celebrity.mp3", time: "3:49"},
+            {title: "Can't Stop the High", url: "https://s3.k-connect.ru/static/music/1475/5958/1770656859_Lady_Gaga_-_Can_t_Stop_the_High.mp3", time: "3:59"},
+            {title: "Vanish Into You", url: "https://s3.k-connect.ru/static/music/1475/5959/1770656860_Lady_Gaga_-_Vanish_Into_You.mp3", time: "4:04"},
+            {title: "Killah", url: "https://s3.k-connect.ru/static/music/1475/5960/1770656860_Lady_Gaga_-_Killah.mp3", time: "3:30"},
+            {title: "Zombieboy", url: "https://s3.k-connect.ru/static/music/1475/5961/1770656861_Lady_Gaga_-_Zombieboy.mp3", time: "3:33"},
+            {title: "The Dead Dance", url: "https://s3.k-connect.ru/static/music/1475/5962/1770656861_Lady_Gaga_-_The_Dead_Dance.mp3", time: "3:49"},
+            {title: "LoveDrug", url: "https://s3.k-connect.ru/static/music/1475/5963/1770656862_Lady_Gaga_-_LoveDrug.mp3", time: "3:13"},
+            {title: "How Bad Do U Want Me", url: "https://s3.k-connect.ru/static/music/1475/5964/1770656932_Lady_Gaga_-_How_Bad_Do_U_Want_Me.mp3", time: "3:58"},
+            {title: "Don't Call Tonight", url: "https://s3.k-connect.ru/static/music/1475/5965/1770656932_Lady_Gaga_-_Don_t_Call_Tonight.mp3", time: "3:45"},
+            {title: "Kill For Love", url: "https://s3.k-connect.ru/static/music/1475/5966/1770656933_Lady_Gaga_-_Kill_For_Love.mp3", time: "4:09"},
+            {title: "Shadow Of A Man", url: "https://s3.k-connect.ru/static/music/1475/5967/1770656933_Lady_Gaga_-_Shadow_Of_A_Man.mp3", time: "3:19"},
+            {title: "The Beast", url: "https://s3.k-connect.ru/static/music/1475/5968/1770656934_Lady_Gaga_-_The_Beast.mp3", time: "3:54"},
+            {title: "Blade Of Grass", url: "https://s3.k-connect.ru/static/music/1475/5969/1770656934_Lady_Gaga_-_Blade_Of_Grass.mp3", time: "4:17"},
+            {title: "Die With A Smile", url: "https://s3.k-connect.ru/static/music/1475/5970/1770656935_Lady_Gaga_-_Die_With_A_Smile.mp3", time: "4:11"}
+        ];
+
         // ========== ЗАГРУЗКА ==========
         async function loadContent() {
             let hash = location.hash.replace('#', '') || 'home';
@@ -125,7 +146,7 @@
             }
         }
 
-        // ========== ПЛЕЕР ==========
+        // ========== ФУНКЦИИ ПЛЕЕРА ==========
         window.playTrack = function(idx, trackList) {
             if (!trackList?.length) return;
             currentTracks = trackList;
@@ -167,11 +188,15 @@
         };
 
         window.nextTrack = function() {
-            if (currentIdx < currentTracks.length - 1) playTrack(currentIdx + 1, currentTracks);
+            if (currentIdx < currentTracks.length - 1) {
+                playTrack(currentIdx + 1, currentTracks);
+            }
         };
 
         window.prevTrack = function() {
-            if (currentIdx > 0) playTrack(currentIdx - 1, currentTracks);
+            if (currentIdx > 0) {
+                playTrack(currentIdx - 1, currentTracks);
+            }
         };
 
         function renderQueue() {
